WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252536
REGRESSION(
257538@main
): CSS opacity doesn't work on dialog::backdrop
https://bugs.webkit.org/show_bug.cgi?id=252536
Summary
REGRESSION(257538@main): CSS opacity doesn't work on dialog::backdrop
Martin
Reported
2023-02-18 12:08:33 PST
Since iOS 16.4 Beta 1, using the `opacity` CSS attribute together with a `background` on `dialog::backdrop` no longer works. Instead, there is always no transparency. See this demo:
https://jsfiddle.net/marto55555/yktr52hw/
Expected behavior: When the dialog is open, the button in the background should be slightly visible.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-02-18 15:31:50 PST
<
rdar://problem/105636947
>
Tim Nguyen (:ntim)
Comment 2
2023-02-19 13:58:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10352
Tim Nguyen (:ntim)
Comment 3
2023-02-19 14:01:00 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/38587
EWS
Comment 4
2023-02-20 12:31:49 PST
Committed
260556@main
(903fc90f8a6a): <
https://commits.webkit.org/260556@main
> Reviewed commits have been landed. Closing PR #10352 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug