Source/WebCore/rendering/RenderLayerBacking.cpp
@@ -80,6 +80,10 @@
 #include <wtf/SystemTracing.h>
 #include <wtf/text/TextStream.h>
 
+#if ENABLE(FULLSCREEN_API)
+#include "FullscreenManager.h"
+#endif
+
 #if PLATFORM(IOS_FAMILY)
 #include "RuntimeApplicationChecks.h"
 #endif
@@ -217,6 +221,11 @@ RenderLayerBacking::RenderLayerBacking(RenderLayer& layer)
             return false;
 
         if (!is<RenderBox>(renderer))
+            return false;
+
+        // Only use background layers on the fullscreen element's backdrop.
+        auto* fullscreenElement = renderer.document().fullscreenManager().fullscreenElement();
+        if (!fullscreenElement || !fullscreenElement->renderer() || fullscreenElement->renderer()->backdropRenderer() != &renderer)
             return false;
 
         auto rendererRect = downcast<RenderBox>(renderer).frameRect();
